--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "@react-native/typescript-config",
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["**/node_modules", "**/Pods"]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@app-screen/*": ["./src/screen/*"],
+      "@app-component/*": ["./src/public/component/*"]
+    }
+  },
+  "exclude": ["node_modules", "android", "ios"]
 }
