--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/elements": "^2.6.5",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-reanimated": "^4.1.2",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
     "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
@@ -31,6 +35,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-jest": "^30.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
